tests/parser/bad/type_t-forall-tid-with.scilla
scilla_version 0

library TestLib

(* this should be a period instead *)
let f : forall 'A :

contract Test
()
